
[package]
name = "polygon-netflow-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ethers = { version = "2", features = ["ws", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
axum = "0.7"
hyper = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
once_cell = "1"
hex = "0.4"

rug = "1.24"
